# actra

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  llms.txt  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: js-sdk-build-publish.yml  py-sdk-build-publish.yml
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json  test_basic.js
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml  requirements.txt
bindings/python/src/: lib.rs
bindings/python/tests/: test_actiongate.py  test_actra.py  test_governance.py  test_version.py
bindings/wasm/: Cargo.toml  package.json  webpack.config.js
bindings/wasm/scripts/: build.mjs
bindings/wasm/src/: lib.rs
bindings/wasm/test/: actra.mjs  browser_test.html  loader.js  node_test.js  package.json  raw-test.mjs  test-bun.mjs  test-bundler.mjs  test-deno.ts  test_browser.html  throughput-test.mjs
bindings/wasm/test/webpack/: index.html  index.js  loader.js  webpack.config.js
bindings/wasm/tests/: wasm_tests.rs
core/: Cargo.toml
core/src/: ast.rs  compiler.rs  engine.rs  errors.rs  governance.rs  ir.rs  lib.rs  schema.rs
core/tests/: compiler_tests.rs  eval_tests.rs  policy_tests.rs  schema_tests.rs  test_governance.rs
doc/: admission-control.md  decision-control.md  governance.md
doc/actra-specifications/: error.md  evaluation-model.md  events.md  node-sdk-architecture.md  policy.md  roadmap.md  runtime.md  types.md
examples/js/advance/ai-agent-tool-guardrail/: index.ts  package.json
examples/js/advance/ai-full/: index.ts  package.json
examples/js/advance/ai-high-risk-action-approval/: index.ts  package.json
examples/js/advance/ai-infrastructure-guardrails/: index.ts  package.json
examples/js/advance/ai-multi-step-safety/: index.ts  package.json
examples/js/core-sdk/basic-refund/: index.ts  package.json
examples/js/core-sdk/basic_refund/: index.ts  package.json
examples/js/core-sdk/build-action/: package.json
examples/js/core-sdk/build_action/: index.ts  package.json
examples/js/core-sdk/custom-action-builder/: index.ts  package.json
examples/js/core-sdk/custom-actor-snapshot-resolvers/: index.ts  package.json
examples/js/core-sdk/fields-filtering/: index.ts  package.json
examples/js/core-sdk/manual-runtime-evaluation/: index.ts  package.json
examples/js/core-sdk/multiple-runtimes/: index.ts  package.json
examples/js/core-sdk/policy-assertion/: index.ts  package.json
examples/js/core-sdk/policy-direct-evaluation/: index.ts  package.json
examples/js/core-sdk/policy-testing/: index.ts  package.json
examples/js/governance/action-specific-governance/: index.ts  package.json
examples/js/governance/enterprise-policy-governance/: index.ts  package.json
examples/js/helpers/: README.md
examples/js/helpers/allow/: index.ts  (+1 more)
examples/js/runtime/: README.md
examples/python/: README.md
examples/python/advance/: README.md  ai-full.py  ai_agent_tool_guardrail.py  ai_high_risk_action_approval.py  ai_infrastructure_guardrails.py  ai_multi_step_safety.py
examples/python/core-sdk/: README.md  basic_refund.py  build_action.py  custom_action_builder.py  custom_actor_snapshot_resolvers.py  fields_filtering.py  manual_runtime_evaluation.py  multiple_runtimes.py  policy_assertion.py  policy_direct_evaluation.py  policy_testing.py
examples/python/governance/: README.md  action_specific_governance.py  enterprise_policy_governance.py  forbid_global_block.py  governance_skipped_when_action_not_present.py  governance_skipped_when_action_not_present.py.py  limit_block_rules.py  require_fraud_protection_rule.py  restrict_policy_fields.py
examples/python/helpers/: README.md  action_evaluate_example.py  allow_helper_example.py  block_helper_example.py  requires_approval.py
examples/python/langchain/: README.md  database_guardrail_agent.py  refund_agent.py  refund_llm_agent.py
examples/python/mcp/: README.md  fastmcp_basic.py
examples/python/runtime/: README.md  audit_decorator.py  context_resolver.py  decision_observer.py  explain_call.py  explain_call_detailed.py  extract_framework_context.py  manual_evaluation_with_events.py
node/: Cargo.toml  index.d.ts  index.js  package.json  test_basic.js
node-bindings/: Cargo.toml
node/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python-bindings/: pyproject.toml
python-bindings/src/: lib.rs
python-bindings/tests/: test_actiongate.py
python/src/: lib.rs
python/tests/: test_actiongate.py  test_actra.py  test_governance.py  test_version.py
scripts/: run_all_examples.sh  sync-version.js  test_py_sdk_build.sh  wasm_pack.sh
sdk/go/: sdk-blueprint.go
sdk/js/: package.json  pnpm-workspace.yaml  sdk-blueprint.ts  tsconfig.json
sdk/js/actra/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/js/common/: package.json
sdk/js/server/: package.json  tsup.config.ts
sdk/python/: README.md  pyproject.toml
sdk/python/actiongate/: __init__.py  policy.py
sdk/python/actra/: __init__.py  blueprint.py  errors.py  events.py  policy.py  runtime.py  types.py
sdk/python/actra/integrations/mcp/: __init__.py  adapter.py  context.py  server.py
sdk/python/tests/: test_actiongate.py  test_actra.py  test_error.py  test_governance.py  test_version.py
(+75 files in other folders)
