[workspace]
members = [
    "core",
    "bindings/python",
    "bindings/node",
    "bindings/wasm"
]

resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Amit Saxena"]
repository = "https://github.com/getactra/actra"
description = "Deterministic admission control engine for state-changing operations in automated systems."
keywords = [
    "policy",
    "authorization",
    "policy-engine",
    "agent",
    "deterministic"
]
categories = [
    "config",
    "api-bindings",
    "development-tools",
]
readme = "README.md"
exclude = [
    ".github/*",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "unwind"