[package]
name = "actra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0.18"
sha2 = "0.10"
hex = "0.4"

[lib]
crate-type = ["rlib"]