[package]
name = "actiongate-node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
actiongate-core = { path = "../../core" }
napi = "3"
napi-derive = "3"
serde_yaml = "0.9"

[build-dependencies]
napi-build = "2"