[package]
name = "actiongate-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_actiongate_core"
crate-type = ["cdylib"]

[dependencies]
actiongate-core = { path = "../../core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
serde_yaml = "0.9"