[package]
name = "actra-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
publish = false

[lib]
name = "actra"
crate-type = ["cdylib"]

[dependencies]
actra-core = { package = "actra", path = "../../core" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39", "generate-import-lib"] }
serde_yaml = "0.9"