[package]
name = "actra-wasm"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actra = { path = "../../core" }
console_error_panic_hook = "0.1"
serde_yaml = "0.9"
serde = "1.0.228"
serde_json = "1.0.149"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
