[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "actra"
description = "Actra - Deterministic admission control engine for automated system actions."
dynamic = ["version"]
authors = [{name = "Amit Saxena"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

keywords = [
  "policy",
  "authorization",
  "policy-engine",
  "automation",
  "admission-control"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security"
]

dependencies = [
    "PyYAML>=6.0.2"
]

[project.urls]
Homepage = "https://github.com/getactra/actra"
Repository = "https://github.com/getactra/actra"
Documentation = "https://github.com/getactra/actra"

[tool.maturin]
manifest-path = "../../bindings/python/Cargo.toml"
module-name = "actra.actra"
python-source = "."
bindings = "pyo3"
strip = true
compatibility = "manylinux2014"
